# powerflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  POWERFLOW.md  README.md  powerflow_history.py  powerflow_history_migration.md  powerflow_history_plan.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: python.yml
crates/powerflow-app/: Cargo.toml  README.md  tauri.conf.json
crates/powerflow-app/icons/: README.md  generate_final_icon.py  generate_icon.py
crates/powerflow-app/src/: main.rs
crates/powerflow-app/ui/: index.html  main.js  style.css
crates/powerflow-cli/: Cargo.toml
crates/powerflow-cli/src/: cli.rs  database.rs  main.rs
crates/powerflow-cli/src/display/: human.rs  json.rs
crates/powerflow-core/: Cargo.toml
crates/powerflow-core/src/: error.rs  lib.rs  models.rs
crates/powerflow-core/src/collector/: iokit.rs  ioreg.rs  mod.rs
crates/powerflow-core/src/collector/smc/: connection.rs  ffi.rs  mod.rs
src/powerflow/: __init__.py  cli.py  database.py  db.py  logger.py  models.py  tui.py
src/powerflow/collector/: base.py  factory.py  ioreg.py
src/powerflow/collector/iokit/: bindings.py  collector.py  connection.py  parser.py  structures.py
src/powerflow/tui/: __init__.py  app.py  widgets.py
src/powermonitor/: cli.py  config.py  config_loader.py  database.py  logger.py  models.py
src/powermonitor/collector/: ioreg.py
src/powermonitor/collector/iokit/: collector.py  connection.py  structures.py
src/powermonitor/tui/: app.py
tests/: __init__.py  conftest.py  test_cli.py  test_collector.py  test_config.py  test_config_loader.py  test_database.py  test_factory.py  test_iokit.py  test_logger.py  test_models.py  test_tui.py
tests/fixtures/: real_mac.txt
