[workspace]
members = [
    "crates/powerflow-core",
    "crates/powerflow-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["PowerFlow Contributors"]
license = "MIT"

[workspace.dependencies]
# Shared dependencies
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
