[project]
name = "powerflow"
version = "0.2.0"
description = "macOS power monitoring tool with auto-updating TUI"
readme = "README.md"
authors = [
    { name = "narumi", email = "toucans-cutouts0f@icloud.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50.0",
    "rich>=13.7.0",
    "textual-plotext>=0.2.0",
]

[project.scripts]
powerflow = "powerflow.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "mypy>=1.8.0",
]
