[project]
name = "powerflow"
version = "0.0.1"
description = "macOS power monitoring tool with auto-updating TUI"
readme = "README.md"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
requires-python = ">=3.13"
dependencies = [
    "textual>=0.50.0",
    "rich>=13.7.0",
    "textual-plotext>=0.2.0",
    "loguru>=0.7.3",
]

[project.scripts]
powerflow = "powerflow.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]

[tool.bumpversion]
current_version = "0.0.1"
tag = true
commit = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=powerflow",
    "--cov-report=term-missing",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
