[project]
name = "powermonitor"
version = "0.0.3"
description = "macOS power monitoring tool with auto-updating TUI"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "narumi", email = "toucans-cutouts0f@icloud.com" }]
dependencies = [
  "loguru>=0.7.3",
  "rich>=13.7.0",
  "textual>=0.50.0",
  "textual-plotext>=0.2.0",
  "typer>=0.21.0",
]

[project.scripts]
powermonitor = "powermonitor.cli:app"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.10",
  "ty>=0.0.7",
]

[tool.ruff]
exclude = ["build"]
line-length = 120

[tool.ruff.lint]
select = [
  "B",  # flake8-bugbear
  "C",  # flake8-comprehensions
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "N",  # pep8-naming
  "SIM",  # flake8-simplify
  "UP",  # pyupgrade
  "W",  # pycodestyle warnings
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=powermonitor",
  "--cov-report=term-missing",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.bumpversion]
current_version = "0.0.3"
tag = true
commit = true
pre_commit_hooks = ["uv lock", "git add uv.lock"]
