[package]
name = "powerflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "powerflow"
path = "src/main.rs"

[dependencies]
# Core library
powerflow-core = { path = "../powerflow-core" }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Output formatting
colored = "2.1"
serde_json = { workspace = true }

# Terminal handling (for watch mode)
crossterm = "0.27"

# Error handling
anyhow = "1.0"

# Date/time
chrono = { workspace = true }
