[package]
name = "powerflow"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "powerflow"
path = "src/main.rs"

[dependencies]
# Core library with IOKit support
powerflow-core = { path = "../powerflow-core", features = ["iokit"] }

# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# Output formatting
colored = "2.1"
serde_json = { workspace = true }

# Terminal handling (for watch mode)
crossterm = "0.27"

# Error handling
anyhow = "1.0"

# Date/time
chrono = { workspace = true }

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# Chart plotting
plotters = "0.3"

# Terminal UI plotting
ratatui = "0.26"

# For unit tests
tempfile = "3"
